// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InfiniteLoader basic list 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1 MuiGrid-spacing-xs-24-24"
    >
      <div
        className="MuiGrid-item-2 MuiGrid-grid-xs-12-40"
      >
        <div
          className="MuiPaper-root-97 MuiPaper-elevation2-101 MuiPaper-rounded-98"
        >
          <div
            className="MuiList-root-124 MuiList-padding-125"
          >
            <div
              style={
                Object {
                  "overflow": "visible",
                  "width": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "height": 400,
                    "overflow": "hidden",
                    "position": "relative",
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "bottom": 0,
                      "left": 0,
                      "marginBottom": 0,
                      "marginRight": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <div
                    aria-label="grid"
                    aria-readonly={true}
                    className="ReactVirtualized__Grid ReactVirtualized__List"
                    onScroll={[Function]}
                    role="grid"
                    style={
                      Object {
                        "WebkitOverflowScrolling": "touch",
                        "boxSizing": "border-box",
                        "direction": "ltr",
                        "height": 400,
                        "overflowX": false,
                        "overflowY": false,
                        "position": "relative",
                        "width": 0,
                        "willChange": "transform",
                      }
                    }
                    tabIndex={0}
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "height": 6,
                      "left": 2,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "transition": "opacity 200ms",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "height": "100%",
                        "position": "relative",
                      }
                    }
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "top": 2,
                      "transition": "opacity 200ms",
                      "width": 6,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InfiniteLoader basic table 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-128 MuiGrid-spacing-xs-24-151"
    >
      <div
        className="MuiGrid-item-129 MuiGrid-grid-xs-12-167"
      >
        <div
          className="MuiPaper-root-224 MuiPaper-elevation2-228 MuiPaper-rounded-225"
        >
          <div
            className="MuiTable-root-251"
          >
            <div
              className="MuiTableHead-root-253 Component-root-252"
            >
              <div
                className="MuiTableRow-root-259 Component-root-254 MuiTableRow-head-262 Component-head-257"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-272 InnerTableCell-root-264 MuiTableCell-head-273 InnerTableCell-head-265"
                  scope="col"
                >
                  Index
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-272 InnerTableCell-root-264 MuiTableCell-head-273 InnerTableCell-head-265"
                  scope="col"
                >
                  Title
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-272 InnerTableCell-root-264 MuiTableCell-head-273 InnerTableCell-head-265"
                  scope="col"
                >
                  Timestamp
                </div>
              </div>
            </div>
            <div
              style={
                Object {
                  "overflow": "visible",
                  "width": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "height": 400,
                    "overflow": "hidden",
                    "position": "relative",
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "bottom": 0,
                      "left": 0,
                      "marginBottom": 0,
                      "marginRight": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <div
                    aria-label="grid"
                    aria-readonly={true}
                    className="ReactVirtualized__Grid ReactVirtualized__List InnerTableBody-root-280"
                    onScroll={[Function]}
                    role="grid"
                    style={
                      Object {
                        "WebkitOverflowScrolling": "touch",
                        "boxSizing": "border-box",
                        "direction": "ltr",
                        "height": 400,
                        "overflowX": false,
                        "overflowY": false,
                        "position": "relative",
                        "width": 0,
                        "willChange": "transform",
                      }
                    }
                    tabIndex={0}
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "height": 6,
                      "left": 2,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "transition": "opacity 200ms",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "height": "100%",
                        "position": "relative",
                      }
                    }
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "top": 2,
                      "transition": "opacity 200ms",
                      "width": 6,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-281 MuiGrid-spacing-xs-24-304"
    >
      <div
        className="MuiDrawer-docked-377"
      >
        <div
          className="MuiPaper-root-388 MuiPaper-elevation0-390 MuiDrawer-paper-378 MuiDrawer-paperAnchorLeft-379 MuiDrawer-paperAnchorDockedLeft-383"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-425 MuiList-padding-426 SideMenu-root-416 Component-flexed-415"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-417"
            />
            <div
              className="MuiButtonBase-root-439 MuiListItem-root-429 MuiListItem-default-432 MuiListItem-gutters-436 SideMenu-listItemGutters-419 MuiListItem-button-437 SideMenu-listItem-418"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-443 MuiListItemIcon-root-442"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-450 SideMenu-listItemText-421"
              >
                <span
                  className="MuiTypography-root-456 MuiTypography-subheading-463 MuiListItemText-primary-453 SideMenu-listItemPrimary-420"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-480"
              />
            </div>
            <div
              className="MuiButtonBase-root-439 MuiListItem-root-429 MuiListItem-default-432 MuiListItem-gutters-436 SideMenu-listItemGutters-419 MuiListItem-button-437 SideMenu-listItem-418"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-443 MuiListItemIcon-root-442"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-450 SideMenu-listItemText-421"
              >
                <span
                  className="MuiTypography-root-456 MuiTypography-subheading-463 MuiListItemText-primary-453 SideMenu-listItemPrimary-420"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-480"
              />
            </div>
            <div
              className="MuiButtonBase-root-439 MuiListItem-root-429 MuiListItem-default-432 MuiListItem-gutters-436 SideMenu-listItemGutters-419 MuiListItem-button-437 SideMenu-listItem-418"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-443 MuiListItemIcon-root-442"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-450 SideMenu-listItemText-421"
              >
                <span
                  className="MuiTypography-root-456 MuiTypography-subheading-463 MuiListItemText-primary-453 SideMenu-listItemPrimary-420"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-443"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </g>
              </svg>
              <span
                className="MuiTouchRipple-root-480"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu mini selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-701 MuiGrid-spacing-xs-24-724"
    >
      <div
        className="MuiDrawer-docked-797"
      >
        <div
          className="MuiPaper-root-808 MuiPaper-elevation0-810 MuiDrawer-paper-798 MuiDrawer-paperAnchorLeft-799 MuiDrawer-paperAnchorDockedLeft-803"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-845 MuiList-padding-846 SideMenu-root-836 Component-flexed-835"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 80,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-837"
            />
            <div
              className="MuiButtonBase-root-859 MuiListItem-root-849 MuiListItem-default-852 MuiListItem-gutters-856 SideMenu-listItemGutters-839 MuiListItem-button-857 SideMenu-activeItem-844"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-863 MuiListItemIcon-root-862"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-870 SideMenu-listItemText-841 SideMenu-listItemHidden-842"
              >
                <span
                  className="MuiTypography-root-876 MuiTypography-subheading-883 MuiListItemText-primary-873 SideMenu-listItemPrimary-840"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-900"
              />
            </div>
            <div
              className="MuiButtonBase-root-859 MuiListItem-root-849 MuiListItem-default-852 MuiListItem-gutters-856 SideMenu-listItemGutters-839 MuiListItem-button-857 SideMenu-listItem-838"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-863 MuiListItemIcon-root-862"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-870 SideMenu-listItemText-841 SideMenu-listItemHidden-842"
              >
                <span
                  className="MuiTypography-root-876 MuiTypography-subheading-883 MuiListItemText-primary-873 SideMenu-listItemPrimary-840"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-900"
              />
            </div>
            <div
              className="MuiButtonBase-root-859 MuiListItem-root-849 MuiListItem-default-852 MuiListItem-gutters-856 SideMenu-listItemGutters-839 MuiListItem-button-857 SideMenu-listItem-838"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-863 MuiListItemIcon-root-862"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-870 SideMenu-listItemText-841 SideMenu-listItemHidden-842"
              >
                <span
                  className="MuiTypography-root-876 MuiTypography-subheading-883 MuiListItemText-primary-873 SideMenu-listItemPrimary-840"
                >
                  Theme
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-900"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-491 MuiGrid-spacing-xs-24-514"
    >
      <div
        className="MuiDrawer-docked-587"
      >
        <div
          className="MuiPaper-root-598 MuiPaper-elevation0-600 MuiDrawer-paper-588 MuiDrawer-paperAnchorLeft-589 MuiDrawer-paperAnchorDockedLeft-593"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-635 MuiList-padding-636 SideMenu-root-626 Component-flexed-625"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-627"
            />
            <div
              className="MuiButtonBase-root-649 MuiListItem-root-639 MuiListItem-default-642 MuiListItem-gutters-646 SideMenu-listItemGutters-629 MuiListItem-button-647 SideMenu-activeItem-634"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-653 MuiListItemIcon-root-652"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-660 SideMenu-listItemText-631"
              >
                <span
                  className="MuiTypography-root-666 MuiTypography-subheading-673 MuiListItemText-primary-663 SideMenu-listItemPrimary-630"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-690"
              />
            </div>
            <div
              className="MuiButtonBase-root-649 MuiListItem-root-639 MuiListItem-default-642 MuiListItem-gutters-646 SideMenu-listItemGutters-629 MuiListItem-button-647 SideMenu-listItem-628"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-653 MuiListItemIcon-root-652"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-660 SideMenu-listItemText-631"
              >
                <span
                  className="MuiTypography-root-666 MuiTypography-subheading-673 MuiListItemText-primary-663 SideMenu-listItemPrimary-630"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-690"
              />
            </div>
            <div
              className="MuiButtonBase-root-649 MuiListItem-root-639 MuiListItem-default-642 MuiListItem-gutters-646 SideMenu-listItemGutters-629 MuiListItem-button-647 SideMenu-listItem-628"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-653 MuiListItemIcon-root-652"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-660 SideMenu-listItemText-631"
              >
                <span
                  className="MuiTypography-root-666 MuiTypography-subheading-673 MuiListItemText-primary-663 SideMenu-listItemPrimary-630"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-653"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </g>
              </svg>
              <span
                className="MuiTouchRipple-root-690"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1369 MuiGrid-spacing-xs-24-1392"
    >
      <div
        className="MuiGrid-item-1370 MuiGrid-grid-xs-12-1408"
      >
        <div
          className="MuiPaper-root-1470 MuiPaper-elevation2-1474 MuiPaper-rounded-1471 Widget-root-1465"
        >
          <h2
            className="MuiTypography-root-1497 MuiTypography-title-1503 MuiTypography-colorInherit-1516 MuiTypography-gutterBottom-1514"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1521 MuiGrid-spacing-xs-24-1544"
    >
      <div
        className="MuiGrid-item-1522 MuiGrid-grid-xs-12-1560"
      >
        <div
          className="MuiPaper-root-1622 MuiPaper-elevation2-1626 MuiPaper-rounded-1623 Widget-root-1617 Widget-featured-1621"
        >
          <h2
            className="MuiTypography-root-1649 MuiTypography-title-1655 MuiTypography-colorInherit-1668 MuiTypography-gutterBottom-1666"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1673 MuiGrid-spacing-xs-24-1696"
    >
      <div
        className="MuiGrid-item-1674 MuiGrid-grid-xs-12-1712"
      >
        <div
          className="MuiGrid-container-1673 MuiGrid-spacing-xs-24-1696"
        >
          <div
            className="MuiGrid-item-1674 MuiGrid-grid-xs-6-1706"
          >
            <div
              className="MuiPaper-root-1776 MuiPaper-elevation2-1780 MuiPaper-rounded-1777 Widget-root-1771 Widget-border-1772 Widget-border-top-1773"
            >
              <h2
                className="MuiTypography-root-1803 MuiTypography-title-1809 MuiTypography-colorInherit-1822 MuiTypography-gutterBottom-1820"
              >
                Border top
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1674 MuiGrid-grid-xs-6-1706"
          >
            <div
              className="MuiPaper-root-1776 MuiPaper-elevation2-1780 MuiPaper-rounded-1777 Widget-root-1771 Widget-border-1772 Widget-border-bottom-1774"
            >
              <h2
                className="MuiTypography-root-1803 MuiTypography-title-1809 MuiTypography-colorInherit-1822 MuiTypography-gutterBottom-1820"
              >
                Border bottom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1674 MuiGrid-grid-xs-6-1706"
          >
            <div
              className="MuiPaper-root-1776 MuiPaper-elevation2-1780 MuiPaper-rounded-1777 Widget-root-1771 Widget-border-1772 Component-customTopBorder-1769 Widget-border-top-1773"
            >
              <h2
                className="MuiTypography-root-1803 MuiTypography-title-1809 MuiTypography-colorInherit-1822 MuiTypography-gutterBottom-1820"
              >
                Border top custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1674 MuiGrid-grid-xs-6-1706"
          >
            <div
              className="MuiPaper-root-1776 MuiPaper-elevation2-1780 MuiPaper-rounded-1777 Widget-root-1771 Widget-border-1772 Component-customBotomBorder-1770 Widget-border-bottom-1774"
            >
              <h2
                className="MuiTypography-root-1803 MuiTypography-title-1809 MuiTypography-colorInherit-1822 MuiTypography-gutterBottom-1820"
              >
                Border bottom custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-911 MuiGrid-spacing-xs-24-934"
    >
      <div
        className="MuiGrid-item-912 MuiGrid-grid-xs-12-950"
      >
        <div
          className="MuiPaper-root-1012 MuiPaper-elevation2-1016 MuiPaper-rounded-1013 Widget-root-1007"
        >
          <h2
            className="MuiTypography-root-1039 MuiTypography-title-1045 MuiTypography-colorInherit-1058 MuiTypography-gutterBottom-1056"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1063 MuiGrid-spacing-xs-24-1086"
    >
      <div
        className="MuiGrid-item-1064 MuiGrid-grid-xs-12-1102"
      >
        <div
          className="MuiPaper-root-1164 MuiPaper-elevation2-1168 MuiPaper-rounded-1165 Widget-root-1159 Widget-featured-1163"
        >
          <h2
            className="MuiTypography-root-1191 MuiTypography-title-1197 MuiTypography-colorInherit-1210 MuiTypography-gutterBottom-1208"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1215 MuiGrid-spacing-xs-24-1238"
    >
      <div
        className="MuiGrid-item-1216 MuiGrid-grid-xs-12-1254"
      >
        <div
          className="MuiGrid-container-1215 MuiGrid-spacing-xs-24-1238"
        >
          <div
            className="MuiGrid-item-1216 MuiGrid-grid-xs-6-1248"
          >
            <div
              className="MuiPaper-root-1318 MuiPaper-elevation2-1322 MuiPaper-rounded-1319 Widget-root-1313 Widget-border-1314 Widget-border-top-1315"
            >
              <h2
                className="MuiTypography-root-1345 MuiTypography-title-1351 MuiTypography-colorInherit-1364 MuiTypography-gutterBottom-1362"
              >
                Border top
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1216 MuiGrid-grid-xs-6-1248"
          >
            <div
              className="MuiPaper-root-1318 MuiPaper-elevation2-1322 MuiPaper-rounded-1319 Widget-root-1313 Widget-border-1314 Widget-border-bottom-1316"
            >
              <h2
                className="MuiTypography-root-1345 MuiTypography-title-1351 MuiTypography-colorInherit-1364 MuiTypography-gutterBottom-1362"
              >
                Border bottom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1216 MuiGrid-grid-xs-6-1248"
          >
            <div
              className="MuiPaper-root-1318 MuiPaper-elevation2-1322 MuiPaper-rounded-1319 Widget-root-1313 Widget-border-1314 Component-customTopBorder-1311 Widget-border-top-1315"
            >
              <h2
                className="MuiTypography-root-1345 MuiTypography-title-1351 MuiTypography-colorInherit-1364 MuiTypography-gutterBottom-1362"
              >
                Border top custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1216 MuiGrid-grid-xs-6-1248"
          >
            <div
              className="MuiPaper-root-1318 MuiPaper-elevation2-1322 MuiPaper-rounded-1319 Widget-root-1313 Widget-border-1314 Component-customBotomBorder-1312 Widget-border-bottom-1316"
            >
              <h2
                className="MuiTypography-root-1345 MuiTypography-title-1351 MuiTypography-colorInherit-1364 MuiTypography-gutterBottom-1362"
              >
                Border bottom custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
